Safari-609.1.11.1/LayoutTests/http/tests/security/storage-blocking-strengthened-websql-expected.txt
CONSOLE MESSAGE: line 12: Web SQL is deprecated. Please use IndexedDB instead.
CONSOLE MESSAGE: line 22: Web SQL is deprecated. Please use IndexedDB instead.
This iframe should return only one security error:



--------
Frame: '<!--frame1-->'
--------
No exception

SecurityError
